--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,8 +114,7 @@ jobs:
         run: |
           git config --global user.name 'q2d2'
           git config --global user.email 'q2d2@users.noreply.github.com'
-          git commit -i conda-env-files/* -m "CI: $QIIME2_PLATFORM env file"
-
+          git commit -i 'conda-env-files/*' -m "CI: $QIIME2_PLATFORM env file"
           git push
 
   # TODO: refactor to use built-in runner conda
