--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,36 +85,48 @@ jobs:
             --override-channels \
             genome-sampler
 
-      - name: export env
-        run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda env export --no-builds --ignore-channels -p ./genome-sampler-env > raw-env.yml
-
       - name: strip env
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           conda activate ./genome-sampler-env
-          python .github/workflows/bin/extract-env.py genome-sampler q2cli --env-file stripped-env.yml
+          python \
+            .github/workflows/bin/extract-env.py \
+            genome-sampler q2cli \
+            --env-file conda-env-files/genome-sampler-py36-$QIIME2_PLATFORM-conda.yml
 
-      - name: rewire channels
+      - name: cache env
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.QIIME2_PLATFORM }}-conda-env
+          path: conda-env-files/genome-sampler-py36-$QIIME2_PLATFORM-conda.yml
+
+  commit-env-files:
+    needs: integrate
+    # TODO: uncomment before merging
+    # if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: fetch envs
+        uses: actions/download-artifact@v2
+        with:
+          path: tmp-envs-dir
+
+      - name: merge results
         run: |
-          source "$CONDA/etc/profile.d/conda.sh"
-          conda activate base
-          sudo conda install -q -y -c conda-forge jq yq
-          yq ". | {channels: [\
-            \"https://packages.qiime2.org/qiime2/unverified\", \
-            \"qiime2\", \
-            \"conda-forge\", \
-            \"bioconda\", \
-            \"defaults\"\
-            ], dependencies: .dependencies}" stripped-env.yml --yaml-output \
-            > conda-env-files/genome-sampler-py36-$QIIME2_PLATFORM-conda.yml
+          mv tmp-envs-dir/linux-conda-env/* conda-env-files/
+          mv tmp-envs-dir/osx-conda-env/* conda-env-files/
 
       - name: commit env files
         run: |
           git config --global user.name 'q2d2'
           git config --global user.email 'q2d2@users.noreply.github.com'
-          git commit -i 'conda-env-files/*' -m "CI: $QIIME2_PLATFORM env file"
+          git commit \
+            conda-env-files/genome-sampler-py36-linux-conda.yml \
+            conda-env-files/genome-sampler-py36-osx-conda.yml \
+            --allow-empty \
+            -m 'CI: updated envs'
           git push
 
   # TODO: refactor to use built-in runner conda
