--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: ${{ env.QIIME2_PLATFORM }}-conda-env
-          path: conda-env-files/genome-sampler-py36-$QIIME2_PLATFORM-conda.yml
+          path: conda-env-files/genome-sampler-py36-${{ env.QIIME2_PLATFORM }}-conda.yml
 
   commit-env-files:
     needs: integrate
