--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,10 +115,11 @@ jobs:
 
       - name: merge results
         run: |
-          ls tmp-envs-dir/linux-conda-env
-          lesss tmp-envs-dir/linux-conda-env
+          ls tmp-envs-dir/
+          tmp-envs-dir/linux-conda-env/genome-sampler-py36-linux-conda.yml
           mv tmp-envs-dir/linux-conda-env/* conda-env-files/
           mv tmp-envs-dir/osx-conda-env/* conda-env-files/
+          ls conda-env-files
 
       - name: commit env files
         run: |
