--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,34 @@
 name: ci
 
+env:
+  QIIME2_CONDA_CHANNEL: qiime2-staging
+  BUILD_TARGET: staging
+  BRANCH: master
+
 on:
   push:
-    branches: [ master ]
-    paths-ignore: [ 'conda-env-files/**' ]
+    branches:
+      - ${{ env.BRANCH }}
+    paths-ignore:
+      - 'conda-env-files/**'
   pull_request:
-    branches: [ master ]
+    branches:
+      - ${{ env.BRANCH }}
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: set up python 3.6
       uses: actions/setup-python@v1
       with:
         python-version: 3.6
+
     - name: install dependencies
       run: python -m pip install --upgrade pip
+
     - name: lint
       run: |
         # Note: no q2lint here, since this isn't an official QIIME 2 product
@@ -34,25 +45,28 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+
     # for versioneer
     - run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+
     - uses: qiime2/action-library-packaging@alpha1
       with:
         package-name: genome-sampler
         additional-tests: pytest --pyargs genome_sampler
-        build-target: release
+        build-target: ${{ env.BUILD_TARGET }}
         library-token: ${{ secrets.LIBRARY_TOKEN }}
 
   integrate:
     needs: build-and-test
     # TODO: uncomment before merging
-    # if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/${{ env.BRANCH }}'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
+
       - name: configure conda
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
@@ -78,7 +92,7 @@ jobs:
           source "$CONDA/etc/profile.d/conda.sh"
           sudo conda install -p ./genome-sampler-env -q \
             -c https://packages.qiime2.org/qiime2/unverified/ \
-            -c qiime2 \
+            -c $QIIME2_CONDA_CHANNEL \
             -c conda-forge \
             -c bioconda \
             -c defaults \
@@ -103,7 +117,7 @@ jobs:
   commit-env-files:
     needs: integrate
     # TODO: uncomment before merging
-    # if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/${{ env.BRANCH }}'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -117,7 +131,6 @@ jobs:
         run: |
           mv tmp-envs-dir/linux-conda-env/* conda-env-files/
           mv tmp-envs-dir/osx-conda-env/* conda-env-files/
-          ls conda-env-files
 
       - name: commit env files
         run: |
@@ -128,7 +141,8 @@ jobs:
             conda-env-files/genome-sampler-py36-osx-conda.yml \
             --allow-empty \
             -m 'CI: updated envs'
-          git push
+          # TODO: uncomment before merging
+          # git push
 
   # TODO: refactor to use built-in runner conda
   doc-build:
@@ -175,7 +189,7 @@ jobs:
   doc-publish:
     needs: doc-build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/${{ env.BRANCH }}'
     steps:
     - name: fetch built docs
       uses: actions/download-artifact@v1
