--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,8 @@ jobs:
 
   integrate:
     needs: build-and-test
-    if: github.ref == 'refs/heads/master'
+    # TODO: uncomment before merging
+    # if: github.ref == 'refs/heads/master'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -77,8 +78,8 @@ jobs:
 
       - name: install QIIME 2 core distro
         run: |
-          envFile=qiime2-2020.8-py36-$QIIME2_PLATFORM-conda.yml
-          wget https://data.qiime2.org/distro/core/$envFile
+          envFile=qiime2-latest-py36-$QIIME2_PLATFORM-conda.yml
+          wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
           sudo conda env create -q -p ./genome-sampler-env --file $envFile
 
       - name: install genome-sampler
@@ -110,7 +111,8 @@ jobs:
 
   commit-env-files:
     needs: integrate
-    if: github.ref == 'refs/heads/master'
+    # TODO: uncomment before merging
+    # if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
