--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,9 @@ jobs:
 
       - name: install QIIME 2 core distro
         run: |
-          envFile=qiime2-latest-py36-$QIIME2_PLATFORM-conda.yml
-          wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
+          # TODO: once we catch up to the QIIME 2 release schedule, fix this
+          envFile=qiime2-2020.8-py36-$QIIME2_PLATFORM-conda.yml
+          wget https://data.qiime2.org/distro/core/$envFile
           sudo conda env create -q -p ./genome-sampler-env --file $envFile
 
       - name: install genome-sampler
