--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.gitignore.io/?templates=vim,code,python,intellij,jupyternotebooks
 
 tmp-envs-dir
+genome-sampler-env
 
 ### Code ###
 .vscode/*
