DOC: tutorial updates (#69)
* DOC: split docs into multiple pages

- fixes #67
- fixes #66
- fixes #64
- partially fixes #36
added tutorial data files

Co-authored-by: Evan Bolyen <ebolyen@gmail.com>

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,1 +1,15 @@
-file: tutorial
+- file: intro
+
+- part: Getting started
+  chapters:
+  - file: install
+  - file: tutorial
+
+- part: Next steps
+  chapters:
+  - file: downstream-workflows
+  - file: other
+
+- part: Back matter
+  chapters:
+  - file: zreferences
