--- a/snakemake/config.yaml
+++ b/snakemake/config.yaml
@@ -1,10 +1,11 @@
 # INPUT FILEPATHS:
+input_dir: 'tutorial-data/'
 context_seqs_fp: 'context-seqs.fasta'
 focal_seqs_fp: 'focal-seqs.fasta'
 context_metadata_fp: 'context-metadata.tsv'
 
 # OUTPUT FILEPATHS:
-output_dir: ''
+output_dir: 'results'
 output_seqs_basename: 'sequences'
 
 # Filter settings
