--- a/conda-env-files/genome-sampler-py36-linux-conda.yml
+++ b/conda-env-files/genome-sampler-py36-linux-conda.yml
@@ -66,7 +66,7 @@ dependencies:
 - ftputil=4.0.0
 - future=0.18.2
 - gdk-pixbuf=2.38.2
-- genome-sampler=2020.8.0.dev0+15.gecdf067
+- genome-sampler=2020.8.0.dev0+17.g6f3eea3
 - gettext=0.19.8.1
 - ghostscript=9.53.3
 - giflib=5.2.1
