CI: updated envs

--- a/conda-env-files/genome-sampler-py36-osx-conda.yml
+++ b/conda-env-files/genome-sampler-py36-osx-conda.yml
@@ -5,9 +5,15 @@ channels:
 - bioconda
 - defaults
 dependencies:
+- aioeasywebdav=2.4.0
+- aiohttp=3.7.4
+- amply=0.1.4
+- appdirs=1.4.4
 - appnope=0.1.0
 - arb-bio-tools=6.0.6
 - argon2-cffi=20.1.0
+- async-timeout=3.0.1
+- attmap=0.12.11
 - attrs=20.1.0
 - backcall=0.2.0
 - backports=1.0
@@ -18,36 +24,77 @@ dependencies:
 - blas=2.17
 - bleach=3.1.5
 - boost-cpp=1.70.0
+- boto=2.49.0
+- boto3=1.17.26
+- botocore=1.20.27
 - brotlipy=0.7.0
+- bz2file=0.98
 - bzip2=1.0.8
-- ca-certificates=2020.11.8
+- c-ares=1.17.1
+- ca-certificates=2020.12.5
 - cachecontrol=0.12.6
-- certifi=2020.11.8
+- cachetools=4.2.1
+- cairo=1.16.0
+- certifi=2020.12.5
 - cffi=1.14.1
 - chardet=3.0.4
 - click=7.1.2
+- coincbc=2.10.5
+- configargparse=1.3
 - cryptography=3.0
 - cycler=0.10.0
 - cython=0.29.21
+- datrie=0.8.2
 - decorator=4.4.2
 - defusedxml=0.6.0
 - docutils=0.16
-- dropbox=10.4.1
+- dropbox=11.4.1
 - entrypoints=0.3
 - fasttree=2.1.10
+- fftw=3.3.8
 - filechunkio=1.8
+- filelock=3.0.12
+- font-ttf-dejavu-sans-mono=2.37
+- font-ttf-inconsolata=2.001
+- font-ttf-source-code-pro=2.030
+- font-ttf-ubuntu=0.83
+- fontconfig=2.13.1
+- fonts-conda-forge=1
 - freetype=2.10.2
-- ftputil=4.0.0
+- fribidi=1.0.10
+- ftputil=5.0.0
 - future=0.18.2
+- gdk-pixbuf=2.38.2
 - genome-sampler=2020.8.0
 - gettext=0.19.8.1
+- ghostscript=9.53.3
+- giflib=5.2.1
+- gitdb=4.0.5
+- gitpython=3.1.14
 - glib=2.65.0
+- gobject-introspection=1.66.1
+- google-api-core=1.25.1
+- google-api-python-client=2.0.2
+- google-auth=1.24.0
+- google-auth-httplib2=0.0.4
+- google-cloud-core=1.5.0
+- google-cloud-storage=1.35.0
+- google-crc32c=1.1.2
+- google-resumable-media=1.2.0
+- googleapis-common-protos=1.52.0
+- graphite2=1.3.13
+- graphviz=2.42.3
+- grpcio=1.33.2
 - h5py=2.10.0
+- harfbuzz=2.4.0
 - hdf5=1.10.6
 - hdmedians=0.13
+- httplib2=0.19.0
 - icu=64.2
 - idna=2.10
+- idna_ssl=1.1.0
 - ijson=3.1.1
+- imagemagick=7.0.10_28
 - importlib-metadata=1.7.0
 - importlib_metadata=1.7.0
 - iniconfig=1.0.1
@@ -56,9 +103,12 @@ dependencies:
 - ipython_genutils=0.2.0
 - ipywidgets=7.5.1
 - iqtree=2.0.3
+- jbig=2.1
 - jedi=0.17.2
 - jinja2=2.11.2
+- jmespath=0.10.0
 - joblib=0.16.0
+- jpeg=9d
 - jsonschema=3.2.0
 - jupyter_client=6.1.6
 - jupyter_core=4.6.3
@@ -66,6 +116,7 @@ dependencies:
 - libarbdb=6.0.6
 - libblas=3.8.0
 - libcblas=3.8.0
+- libcrc32c=1.1.1
 - libcxx=10.0.1
 - libffi=3.2.1
 - libgcc=4.8.5
@@ -76,9 +127,18 @@ dependencies:
 - liblapacke=3.8.0
 - libopenblas=0.3.10
 - libpng=1.6.37
+- libprotobuf=3.13.0.1
+- librsvg=2.50.2
 - libsodium=1.0.18
+- libtiff=4.1.0
+- libwebp=1.1.0
+- libwebp-base=1.1.0
+- libxcb=1.13
+- libxml2=2.9.10
 - llvm-openmp=10.0.1
 - lockfile=0.12.2
+- logmuse=0.2.6
+- lz4-c=1.9.2
 - mafft=7.471
 - markupsafe=1.1.1
 - matplotlib=3.2.2
@@ -86,6 +146,7 @@ dependencies:
 - mistune=0.8.4
 - more-itertools=8.4.0
 - msgpack-python=1.0.0
+- multidict=5.1.0
 - natsort=7.0.1
 - nbconvert=5.6.1
 - nbformat=5.0.7
@@ -93,26 +154,41 @@ dependencies:
 - networkx=2.4
 - notebook=6.1.3
 - numpy=1.19.1
-- openssl=1.1.1h
+- oauth2client=4.1.3
+- openjpeg=2.3.1
+- openssl=1.1.1j
 - packaging=20.4
 - pandas=0.25.3
 - pandoc=2.10.1
 - pandocfilters=1.4.2
+- pango=1.42.4
 - paramiko=2.7.2
 - parso=0.7.1
 - patsy=0.5.1
 - pcre=8.44
+- peppy=0.31.0
+- perl=5.26.2
 - pexpect=4.8.0
 - pickleshare=0.7.5
 - pip=20.2.2
+- pixman=0.38.0
+- pkg-config=0.29.2
 - pluggy=0.13.1
+- ply=3.11
+- prettytable=2.1.0
 - prometheus_client=0.8.0
 - prompt-toolkit=3.0.6
+- protobuf=3.13.0.1
 - psutil=5.7.2
+- pthread-stubs=0.4
 - ptyprocess=0.6.0
+- pulp=2.4
 - py=1.9.0
+- pyasn1=0.4.8
+- pyasn1-modules=0.2.7
 - pycparser=2.20
 - pygments=2.6.1
+- pygraphviz=1.6
 - pynacl=1.4.0
 - pyopenssl=19.1.0
 - pyparsing=2.4.7
@@ -122,6 +198,7 @@ dependencies:
 - pytest=6.0.1
 - python=3.6.11
 - python-dateutil=2.8.1
+- python-irodsclient=0.8.6
 - python_abi=3.6
 - pytz=2020.1
 - pyvcf=0.6.8
@@ -134,9 +211,12 @@ dependencies:
 - q2cli=2020.8.0
 - q2templates=2020.8.0
 - qiime2=2020.8.0
+- ratelimiter=1.2.0
 - raxml=8.2.12
 - readline=8.0
 - requests=2.24.0
+- rsa=4.7.2
+- s3transfer=0.3.4
 - scikit-bio=0.5.5
 - scikit-learn=0.23.1
 - scipy=1.5.2
@@ -144,29 +224,56 @@ dependencies:
 - seaborn-base=0.10.1
 - send2trash=1.5.0
 - setuptools=49.6.0
+- simplejson=3.17.2
 - sina=1.7.1
 - six=1.15.0
-- snakemake=3.13.3
+- slacker=0.14.0
+- smart_open=4.2.0
+- smmap=3.0.5
+- snakemake=6.0.5
+- snakemake-minimal=6.0.5
 - sqlite=3.33.0
 - statsmodels=0.11.1
+- stone=3.2.1
 - tbb=2019.9
 - terminado=0.8.3
 - testpath=0.4.4
 - threadpoolctl=2.1.0
 - tk=8.6.10
 - toml=0.10.1
+- toposort=1.6
 - tornado=6.0.4
 - traitlets=4.3.3
+- typing-extensions=3.7.4.2
+- typing_extensions=3.7.4.2
 - tzlocal=2.1
+- ubiquerg=0.6.1
+- uritemplate=3.0.1
 - urllib3=1.25.10
+- veracitools=0.1.3
 - vsearch=2.7.0
 - wcwidth=0.2.5
 - webencodings=0.5.1
 - wheel=0.35.1
 - widgetsnbextension=3.5.1
 - wrapt=1.12.1
+- xmlrunner=1.7.7
+- xorg-kbproto=1.0.7
+- xorg-libice=1.0.10
+- xorg-libsm=1.2.3
+- xorg-libx11=1.7.0
+- xorg-libxau=1.0.9
+- xorg-libxdmcp=1.1.3
+- xorg-libxext=1.3.4
+- xorg-libxrender=0.9.10
+- xorg-libxt=1.2.1
+- xorg-renderproto=0.11.1
+- xorg-xextproto=7.3.0
+- xorg-xproto=7.0.31
 - xz=5.2.5
 - yaml=0.2.5
+- yarl=1.5.1
 - zeromq=4.3.2
 - zipp=3.1.0
 - zlib=1.2.11
+- zstd=1.4.5
