--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
 
   integrate:
     needs: build-and-test
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
@@ -77,9 +77,8 @@ jobs:
 
       - name: install QIIME 2 core distro
         run: |
-          # TODO: once we catch up to the QIIME 2 release schedule, fix this
-          envFile=qiime2-2020.8-py36-$QIIME2_PLATFORM-conda.yml
-          wget https://data.qiime2.org/distro/core/$envFile
+          envFile=qiime2-latest-py36-$QIIME2_PLATFORM-conda.yml
+          wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
           sudo conda env create -q -p ./genome-sampler-env --file $envFile
 
       - name: install genome-sampler and snakemake
