--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,17 +77,15 @@ jobs:
 
       - name: install QIIME 2 core distro
         run: |
-          # TODO: once we catch up to the QIIME 2 release schedule, fix this
-          envFile=qiime2-2020.8-py36-$QIIME2_PLATFORM-conda.yml
-          wget https://data.qiime2.org/distro/core/$envFile
+          envFile=qiime2-latest-py36-$QIIME2_PLATFORM-conda.yml
+          wget https://raw.githubusercontent.com/qiime2/environment-files/master/latest/staging/$envFile
           sudo conda env create -q -p ./genome-sampler-env --file $envFile
 
       - name: install genome-sampler and snakemake
         run: |
           source "$CONDA/etc/profile.d/conda.sh"
           sudo conda install -p ./genome-sampler-env -q \
-            -c https://packages.qiime2.org/qiime2/unverified/ \
-            -c qiime2-staging \
+            -c https://packages.qiime2.org/qiime2/2021.4/tested/ \
             -c conda-forge \
             -c bioconda \
             -c defaults \
