--- a/conda-env-files/genome-sampler-py36-osx-conda.yml
+++ b/conda-env-files/genome-sampler-py36-osx-conda.yml
@@ -1,279 +1,252 @@
 channels:
 - https://packages.qiime2.org/qiime2/unverified/
-- qiime2/label/r2020.8
+- qiime2/label/r2021.4
 - conda-forge
 - bioconda
 - defaults
 dependencies:
 - aioeasywebdav=2.4.0
 - aiohttp=3.7.4
-- amply=0.1.4
 - appdirs=1.4.4
-- appnope=0.1.0
-- arb-bio-tools=6.0.6
+- appnope=0.1.2
 - argon2-cffi=20.1.0
 - async-timeout=3.0.1
-- attmap=0.12.11
-- attrs=20.1.0
+- async_generator=1.10
+- atk-1.0=2.36.0
+- attrs=20.3.0
 - backcall=0.2.0
 - backports=1.0
 - backports.functools_lru_cache=1.6.1
 - bcrypt=3.2.0
 - bibtexparser=1.1.0
-- biom-format=2.1.8
-- blas=2.17
-- bleach=3.1.5
-- boost-cpp=1.70.0
-- boto=2.49.0
-- boto3=1.17.26
-- botocore=1.20.27
+- biom-format=2.1.10
+- blas=2.108
+- blas-devel=3.9.0
+- bleach=3.3.0
+- boto3=1.17.30
+- botocore=1.20.30
 - brotlipy=0.7.0
-- bz2file=0.98
-- bzip2=1.0.8
 - c-ares=1.17.1
 - ca-certificates=2020.12.5
 - cachecontrol=0.12.6
+- cached-property=1.5.2
+- cached_property=1.5.2
 - cachetools=4.2.1
 - cairo=1.16.0
 - certifi=2020.12.5
-- cffi=1.14.1
-- chardet=3.0.4
+- cffi=1.14.5
+- chardet=4.0.0
 - click=7.1.2
-- coincbc=2.10.5
-- configargparse=1.3
-- cryptography=3.0
+- configargparse=1.4
+- cryptography=3.4.6
 - cycler=0.10.0
-- cython=0.29.21
+- cython=0.29.22
 - datrie=0.8.2
 - decorator=4.4.2
-- defusedxml=0.6.0
+- defusedxml=0.7.1
 - docutils=0.16
 - dropbox=11.4.1
 - entrypoints=0.3
+- expat=2.2.10
 - fasttree=2.1.10
-- fftw=3.3.8
 - filechunkio=1.8
-- filelock=3.0.12
 - font-ttf-dejavu-sans-mono=2.37
 - font-ttf-inconsolata=2.001
 - font-ttf-source-code-pro=2.030
 - font-ttf-ubuntu=0.83
 - fontconfig=2.13.1
+- fonts-conda-ecosystem=1
 - fonts-conda-forge=1
-- freetype=2.10.2
+- freetype=2.10.4
 - fribidi=1.0.10
 - ftputil=5.0.0
 - future=0.18.2
-- gdk-pixbuf=2.38.2
-- genome-sampler=2020.8.0
+- gdk-pixbuf=2.42.2
+- genome-sampler=2021.4.0.dev0+7.gb11a9a0
 - gettext=0.19.8.1
-- ghostscript=9.53.3
 - giflib=5.2.1
-- gitdb=4.0.5
-- gitpython=3.1.14
-- glib=2.65.0
-- gobject-introspection=1.66.1
 - google-api-core=1.25.1
-- google-api-python-client=2.0.2
 - google-auth=1.24.0
-- google-auth-httplib2=0.0.4
 - google-cloud-core=1.5.0
-- google-cloud-storage=1.35.0
+- google-cloud-storage=1.19.0
 - google-crc32c=1.1.2
 - google-resumable-media=1.2.0
 - googleapis-common-protos=1.52.0
 - graphite2=1.3.13
-- graphviz=2.42.3
-- grpcio=1.33.2
-- h5py=2.10.0
-- harfbuzz=2.4.0
+- graphviz=2.47.0
+- grpcio=1.36.1
+- gtk2=2.24.33
+- gts=0.7.6
+- h5py=3.1.0
+- harfbuzz=2.7.4
 - hdf5=1.10.6
-- hdmedians=0.13
-- httplib2=0.19.0
-- icu=64.2
+- hdmedians=0.14.2
+- icu=68.1
 - idna=2.10
 - idna_ssl=1.1.0
-- ijson=3.1.1
-- imagemagick=7.0.10_28
-- importlib-metadata=1.7.0
-- importlib_metadata=1.7.0
-- iniconfig=1.0.1
-- ipykernel=5.3.4
+- ijson=3.1.3
+- importlib-metadata=3.7.2
+- importlib_metadata=3.7.2
+- iniconfig=1.1.1
+- ipykernel=5.5.0
 - ipython=7.16.1
 - ipython_genutils=0.2.0
-- ipywidgets=7.5.1
+- ipywidgets=7.6.3
 - iqtree=2.0.3
-- jbig=2.1
 - jedi=0.17.2
-- jinja2=2.11.2
+- jinja2=2.11.3
 - jmespath=0.10.0
-- joblib=0.16.0
+- joblib=1.0.1
 - jpeg=9d
 - jsonschema=3.2.0
-- jupyter_client=6.1.6
-- jupyter_core=4.6.3
-- kiwisolver=1.2.0
-- libarbdb=6.0.6
-- libblas=3.8.0
-- libcblas=3.8.0
+- jupyter_client=6.1.11
+- jupyter_core=4.7.1
+- jupyterlab_pygments=0.1.2
+- jupyterlab_widgets=1.0.0
+- kiwisolver=1.3.1
+- krb5=1.17.2
+- lcms2=2.12
+- libblas=3.9.0
+- libcblas=3.9.0
 - libcrc32c=1.1.1
-- libcxx=10.0.1
-- libffi=3.2.1
+- libcurl=7.75.0
+- libcxx=11.1.0
+- libedit=3.1.20191231
+- libev=4.33
+- libffi=3.3
 - libgcc=4.8.5
-- libgfortran=4.0.0
-- libgfortran4=7.5.0
+- libgd=2.3.0
+- libgfortran=5.0.0
+- libgfortran5=9.3.0
+- libglib=2.66.7
 - libiconv=1.16
-- liblapack=3.8.0
-- liblapacke=3.8.0
-- libopenblas=0.3.10
+- liblapack=3.9.0
+- liblapacke=3.9.0
+- libnghttp2=1.43.0
+- libopenblas=0.3.12
 - libpng=1.6.37
-- libprotobuf=3.13.0.1
-- librsvg=2.50.2
+- libprotobuf=3.15.6
+- librsvg=2.50.3
 - libsodium=1.0.18
-- libtiff=4.1.0
-- libwebp=1.1.0
-- libwebp-base=1.1.0
-- libxcb=1.13
+- libssh2=1.9.0
+- libtiff=4.2.0
+- libtool=2.4.6
+- libwebp=1.2.0
+- libwebp-base=1.2.0
 - libxml2=2.9.10
-- llvm-openmp=10.0.1
+- llvm-openmp=11.0.1
 - lockfile=0.12.2
-- logmuse=0.2.6
-- lz4-c=1.9.2
-- mafft=7.471
+- lz4-c=1.9.3
+- mafft=7.475
 - markupsafe=1.1.1
-- matplotlib=3.2.2
-- matplotlib-base=3.2.2
+- matplotlib-base=3.3.4
 - mistune=0.8.4
-- more-itertools=8.4.0
-- msgpack-python=1.0.0
+- more-itertools=8.7.0
+- msgpack-python=1.0.2
 - multidict=5.1.0
-- natsort=7.0.1
-- nbconvert=5.6.1
-- nbformat=5.0.7
+- natsort=7.1.1
+- nbclient=0.5.3
+- nbconvert=6.0.7
+- nbformat=5.1.2
 - ncurses=6.2
-- networkx=2.4
-- notebook=6.1.3
-- numpy=1.19.1
-- oauth2client=4.1.3
-- openjpeg=2.3.1
+- nest-asyncio=1.4.3
+- networkx=2.5
+- notebook=6.2.0
+- numpy=1.19.5
+- olefile=0.46
+- openblas=0.3.12
 - openssl=1.1.1j
-- packaging=20.4
-- pandas=0.25.3
-- pandoc=2.10.1
+- packaging=20.9
+- pandas=1.1.5
+- pandoc=2.12
 - pandocfilters=1.4.2
 - pango=1.42.4
 - paramiko=2.7.2
 - parso=0.7.1
 - patsy=0.5.1
 - pcre=8.44
-- peppy=0.31.0
-- perl=5.26.2
 - pexpect=4.8.0
 - pickleshare=0.7.5
-- pip=20.2.2
-- pixman=0.38.0
-- pkg-config=0.29.2
+- pillow=8.1.2
+- pip=21.0.1
+- pixman=0.40.0
 - pluggy=0.13.1
 - ply=3.11
 - prettytable=2.1.0
-- prometheus_client=0.8.0
-- prompt-toolkit=3.0.6
-- protobuf=3.13.0.1
-- psutil=5.7.2
-- pthread-stubs=0.4
-- ptyprocess=0.6.0
-- pulp=2.4
-- py=1.9.0
+- prometheus_client=0.9.0
+- prompt-toolkit=3.0.16
+- protobuf=3.15.6
+- psutil=5.8.0
+- ptyprocess=0.7.0
+- py=1.10.0
 - pyasn1=0.4.8
 - pyasn1-modules=0.2.7
 - pycparser=2.20
-- pygments=2.6.1
-- pygraphviz=1.6
+- pygments=2.8.1
+- pygraphviz=1.3.1
 - pynacl=1.4.0
-- pyopenssl=19.1.0
+- pyopenssl=20.0.1
 - pyparsing=2.4.7
-- pyrsistent=0.16.0
+- pyrsistent=0.17.3
 - pysftp=0.2.9
 - pysocks=1.7.1
-- pytest=6.0.1
-- python=3.6.11
+- pytest=6.2.2
+- python=3.6.13
 - python-dateutil=2.8.1
 - python-irodsclient=0.8.6
 - python_abi=3.6
-- pytz=2020.1
+- pytz=2021.1
 - pyvcf=0.6.8
-- pyyaml=5.3.1
-- pyzmq=19.0.2
-- q2-alignment=2020.8.0
-- q2-feature-table=2020.8.0
-- q2-phylogeny=2020.8.0
-- q2-types=2020.8.0
-- q2cli=2020.8.0
-- q2templates=2020.8.0
-- qiime2=2020.8.0
+- pyyaml=5.4.1
+- pyzmq=22.0.3
+- q2-alignment=2021.4.0.dev0+1.g2bb78e9
+- q2-feature-table=2021.4.0.dev0
+- q2-phylogeny=2021.4.0.dev0
+- q2-types=2021.4.0.dev0
+- q2cli=2021.4.0.dev0
+- q2templates=2021.4.0.dev0
+- qiime2=2021.4.0.dev0
 - ratelimiter=1.2.0
 - raxml=8.2.12
 - readline=8.0
-- requests=2.24.0
+- requests=2.25.1
 - rsa=4.7.2
 - s3transfer=0.3.4
-- scikit-bio=0.5.5
+- scikit-bio=0.5.6
 - scikit-learn=0.23.1
-- scipy=1.5.2
-- seaborn=0.10.1
-- seaborn-base=0.10.1
+- scipy=1.5.3
+- seaborn=0.11.1
+- seaborn-base=0.11.1
 - send2trash=1.5.0
 - setuptools=49.6.0
-- simplejson=3.17.2
-- sina=1.7.1
 - six=1.15.0
-- slacker=0.14.0
-- smart_open=4.2.0
-- smmap=3.0.5
-- snakemake=6.0.5
-- snakemake-minimal=6.0.5
-- sqlite=3.33.0
-- statsmodels=0.11.1
+- snakemake=5.3.0
+- snakemake-minimal=5.3.0
+- sqlite=3.34.0
+- statsmodels=0.12.2
 - stone=3.2.1
-- tbb=2019.9
-- terminado=0.8.3
+- terminado=0.9.2
 - testpath=0.4.4
 - threadpoolctl=2.1.0
 - tk=8.6.10
-- toml=0.10.1
-- toposort=1.6
-- tornado=6.0.4
+- toml=0.10.2
+- tornado=6.1
 - traitlets=4.3.3
-- typing-extensions=3.7.4.2
-- typing_extensions=3.7.4.2
+- typing-extensions=3.7.4.3
+- typing_extensions=3.7.4.3
 - tzlocal=2.1
-- ubiquerg=0.6.1
-- uritemplate=3.0.1
-- urllib3=1.25.10
-- veracitools=0.1.3
+- urllib3=1.26.3
 - vsearch=2.7.0
 - wcwidth=0.2.5
 - webencodings=0.5.1
-- wheel=0.35.1
+- wheel=0.36.2
 - widgetsnbextension=3.5.1
 - wrapt=1.12.1
 - xmlrunner=1.7.7
-- xorg-kbproto=1.0.7
-- xorg-libice=1.0.10
-- xorg-libsm=1.2.3
-- xorg-libx11=1.7.0
-- xorg-libxau=1.0.9
-- xorg-libxdmcp=1.1.3
-- xorg-libxext=1.3.4
-- xorg-libxrender=0.9.10
-- xorg-libxt=1.2.1
-- xorg-renderproto=0.11.1
-- xorg-xextproto=7.3.0
-- xorg-xproto=7.0.31
 - xz=5.2.5
 - yaml=0.2.5
-- yarl=1.5.1
-- zeromq=4.3.2
-- zipp=3.1.0
+- yarl=1.6.3
+- zeromq=4.3.4
+- zipp=3.4.1
 - zlib=1.2.11
-- zstd=1.4.5
+- zstd=1.4.9
