maint: moving type, formats to q2-types

--- a/ci/recipe/meta.yaml
+++ b/ci/recipe/meta.yaml
@@ -30,6 +30,7 @@ test:
   imports:
     - genome_sampler
     - qiime2.plugins.genome_sampler
+    - qiime2.plugins.q2_types
 
 about:
   home: https://github.com/caporaso-lab/genome-sampler
