gh: updating gh workflow build target

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       with:
         package-name: genome-sampler
         additional-tests: pytest --pyargs genome_sampler
-        build-target: staging
+        build-target: dev
         library-token: ${{ secrets.LIBRARY_TOKEN }}
 
   integrate:
